src/main/java/top/voidc/frontend/parser/IceParser.java
// Generated from Ice.g4 by ANTLR 4.12.0

package top.voidc.frontend.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IceParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, NAME=73, IDENTIFIER=74, 
		GLOBAL_IDENTIFIER=75, NUMBER=76, FLOAT=77, WS=78, LINE_COMMENT=79;
	public static final int
		RULE_module = 0, RULE_moduleDecl = 1, RULE_globalDecl = 2, RULE_functionDecl = 3, 
		RULE_functionBody = 4, RULE_basicBlock = 5, RULE_instruction = 6, RULE_terminatorInstr = 7, 
		RULE_allocaInstr = 8, RULE_loadInstr = 9, RULE_storeInstr = 10, RULE_branchInstr = 11, 
		RULE_returnInstr = 12, RULE_arithmeticInstr = 13, RULE_callInstr = 14, 
		RULE_getElementPtrInstr = 15, RULE_phiInstr = 16, RULE_compareInstr = 17, 
		RULE_convertInstr = 18, RULE_unreachableInstr = 19, RULE_type = 20, RULE_baseType = 21, 
		RULE_derivedType = 22, RULE_arrayType = 23, RULE_pointerType = 24, RULE_stars = 25, 
		RULE_value = 26, RULE_constant = 27, RULE_binOp = 28, RULE_cmpOp = 29, 
		RULE_convertOp = 30, RULE_argList = 31, RULE_pointer = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "moduleDecl", "globalDecl", "functionDecl", "functionBody", 
			"basicBlock", "instruction", "terminatorInstr", "allocaInstr", "loadInstr", 
			"storeInstr", "branchInstr", "returnInstr", "arithmeticInstr", "callInstr", 
			"getElementPtrInstr", "phiInstr", "compareInstr", "convertInstr", "unreachableInstr", 
			"type", "baseType", "derivedType", "arrayType", "pointerType", "stars", 
			"value", "constant", "binOp", "cmpOp", "convertOp", "argList", "pointer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "'='", "'global'", "'define'", "'('", "','", "')'", "'{'", 
			"'}'", "':'", "'alloca'", "'align'", "'load'", "'store'", "'br'", "'label'", 
			"'ret'", "'void'", "'call'", "'getelementptr'", "'phi'", "'['", "']'", 
			"'icmp'", "'fcmp'", "'to'", "'unreachable'", "'i1'", "'i8'", "'i32'", 
			"'float'", "'x'", "'*'", "'true'", "'false'", "'null'", "'undef'", "'add'", 
			"'sub'", "'mul'", "'udiv'", "'sdiv'", "'urem'", "'srem'", "'and'", "'or'", 
			"'xor'", "'shl'", "'lshr'", "'ashr'", "'eq'", "'ne'", "'ugt'", "'uge'", 
			"'ult'", "'ule'", "'sgt'", "'sge'", "'slt'", "'sle'", "'trunc'", "'zext'", 
			"'sext'", "'fptrunc'", "'fpext'", "'fptoui'", "'fptosi'", "'uitofp'", 
			"'sitofp'", "'ptrtoint'", "'inttoptr'", "'bitcast'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "NAME", "IDENTIFIER", "GLOBAL_IDENTIFIER", "NUMBER", "FLOAT", "WS", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ice.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IceParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public List<ModuleDeclContext> moduleDecl() {
			return getRuleContexts(ModuleDeclContext.class);
		}
		public ModuleDeclContext moduleDecl(int i) {
			return getRuleContext(ModuleDeclContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__3) {
				{
				{
				setState(66);
				moduleDecl();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public GlobalDeclContext globalDecl() {
			return getRuleContext(GlobalDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitModuleDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDecl);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				globalDecl();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				functionDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalDeclContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(IceParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public GlobalDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitGlobalDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDeclContext globalDecl() throws RecognitionException {
		GlobalDeclContext _localctx = new GlobalDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			match(IDENTIFIER);
			setState(78);
			match(T__1);
			setState(79);
			match(T__2);
			setState(80);
			type();
			setState(81);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode GLOBAL_IDENTIFIER() { return getToken(IceParser.GLOBAL_IDENTIFIER, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(IceParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IceParser.IDENTIFIER, i);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__3);
			setState(84);
			type();
			setState(85);
			match(GLOBAL_IDENTIFIER);
			setState(86);
			match(T__4);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4030988288L) != 0)) {
				{
				setState(87);
				type();
				setState(88);
				match(IDENTIFIER);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(89);
					match(T__5);
					setState(90);
					type();
					setState(91);
					match(IDENTIFIER);
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(100);
			match(T__6);
			setState(101);
			functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyContext extends ParserRuleContext {
		public List<BasicBlockContext> basicBlock() {
			return getRuleContexts(BasicBlockContext.class);
		}
		public BasicBlockContext basicBlock(int i) {
			return getRuleContext(BasicBlockContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__7);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(104);
				basicBlock();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasicBlockContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(IceParser.NAME, 0); }
		public TerminatorInstrContext terminatorInstr() {
			return getRuleContext(TerminatorInstrContext.class,0);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public BasicBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitBasicBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicBlockContext basicBlock() throws RecognitionException {
		BasicBlockContext _localctx = new BasicBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_basicBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(NAME);
			setState(113);
			match(T__9);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 14)) & ~0x3f) == 0 && ((1L << (_la - 14)) & 1152921504606847009L) != 0)) {
				{
				{
				setState(114);
				instruction();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			terminatorInstr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public AllocaInstrContext allocaInstr() {
			return getRuleContext(AllocaInstrContext.class,0);
		}
		public LoadInstrContext loadInstr() {
			return getRuleContext(LoadInstrContext.class,0);
		}
		public StoreInstrContext storeInstr() {
			return getRuleContext(StoreInstrContext.class,0);
		}
		public ArithmeticInstrContext arithmeticInstr() {
			return getRuleContext(ArithmeticInstrContext.class,0);
		}
		public CallInstrContext callInstr() {
			return getRuleContext(CallInstrContext.class,0);
		}
		public GetElementPtrInstrContext getElementPtrInstr() {
			return getRuleContext(GetElementPtrInstrContext.class,0);
		}
		public PhiInstrContext phiInstr() {
			return getRuleContext(PhiInstrContext.class,0);
		}
		public CompareInstrContext compareInstr() {
			return getRuleContext(CompareInstrContext.class,0);
		}
		public ConvertInstrContext convertInstr() {
			return getRuleContext(ConvertInstrContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instruction);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				allocaInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				loadInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				storeInstr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				arithmeticInstr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				callInstr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(127);
				getElementPtrInstr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(128);
				phiInstr();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(129);
				compareInstr();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(130);
				convertInstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminatorInstrContext extends ParserRuleContext {
		public ReturnInstrContext returnInstr() {
			return getRuleContext(ReturnInstrContext.class,0);
		}
		public BranchInstrContext branchInstr() {
			return getRuleContext(BranchInstrContext.class,0);
		}
		public UnreachableInstrContext unreachableInstr() {
			return getRuleContext(UnreachableInstrContext.class,0);
		}
		public TerminatorInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminatorInstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitTerminatorInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminatorInstrContext terminatorInstr() throws RecognitionException {
		TerminatorInstrContext _localctx = new TerminatorInstrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_terminatorInstr);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				returnInstr();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				branchInstr();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				unreachableInstr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AllocaInstrContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(IceParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(IceParser.NUMBER, 0); }
		public AllocaInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allocaInstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitAllocaInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllocaInstrContext allocaInstr() throws RecognitionException {
		AllocaInstrContext _localctx = new AllocaInstrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_allocaInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(IDENTIFIER);
			setState(139);
			match(T__1);
			setState(140);
			match(T__10);
			setState(141);
			type();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(142);
				match(T__5);
				setState(143);
				match(T__11);
				setState(144);
				match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoadInstrContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(IceParser.IDENTIFIER, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public PointerContext pointer() {
			return getRuleContext(PointerContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(IceParser.NUMBER, 0); }
		public LoadInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadInstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitLoadInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoadInstrContext loadInstr() throws RecognitionException {
		LoadInstrContext _localctx = new LoadInstrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_loadInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(IDENTIFIER);
			setState(148);
			match(T__1);
			setState(149);
			match(T__12);
			setState(150);
			type();
			setState(151);
			match(T__5);
			setState(152);
			type();
			setState(153);
			pointer();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(154);
				match(T__5);
				setState(155);
				match(T__11);
				setState(156);
				match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StoreInstrContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public PointerContext pointer() {
			return getRuleContext(PointerContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(IceParser.NUMBER, 0); }
		public StoreInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storeInstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitStoreInstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StoreInstrContext storeInstr() throws RecognitionException {
		StoreInstrContext _localctx = new StoreInstrContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_storeInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(T__13);
			setState(160);
			type();
			setState(161);
			value();
			setState(162);
			match(T__5);
			setState(163);
			type();
			setState(164);
			pointer();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(165);
				match(T__5);
				setState(166);
				match(T__11);
				setState(167);
				match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BranchInstrContext extends ParserRuleContext {
		public BranchInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branchInstr; }
	 
		public BranchInstrContext() { }
		public void copyFrom(BranchInstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnconditionalBranchContext extends BranchInstrContext {
		public TerminalNode IDENTIFIER() { return getToken(IceParser.IDENTIFIER, 0); }
		public UnconditionalBranchContext(BranchInstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitUnconditionalBranch(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalBranchContext extends BranchInstrContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(IceParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IceParser.IDENTIFIER, i);
		}
		public ConditionalBranchContext(BranchInstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IceVisitor ) return ((IceVisitor<? extends T>)visitor).visitConditionalBranch(this);
			else return visitor.visitChildren(this);
		}
	}
